--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.rbc
 /.config
 /coverage/
+/node_modules
 /InstalledFiles
 /pkg/
 /spec/reports/
@@ -51,6 +52,9 @@ build-iPhoneSimulator/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+config/database.yml
+config/environment_variables.yml
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
